--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <body>
   <h1>asdjfkasdjf</h1>
-  <input name="haha" type="button">dfdf</input>
+  <input name="haha" type="button" text="asdf"></input>
  </body>
