--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <body>
   <h1>asdjfkasdjf</h1>
-  <input onclick="alert('you mother fucker')">你好吗!!!!!</input>
+  <input type="button" onclick="alert('you mother fucker')">你好吗!!!!!</input>
  </body>
